deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: great-chat-app
  labels:
    app: great-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: great-chat
  template:
    metadata:
      labels:
        app: great-chat
    spec:
      imagePullSecrets:
        - name: harbor-registry-secret
      containers:
        - image: harbor.arpansahu.space/library/great_chat:latest
          name: great-chat
          ports:
            - containerPort: 8002
              name: daphne
  revisionHistoryLimit: 0
