service.yaml
apiVersion: v1
kind: Service
metadata:
  name: great-chat-service
spec:
  selector:
    app: great-chat
  ports:
  - protocol: TCP
    port: 8020
    targetPort: 8002
  type: ClusterIP
