ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: great-chat-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
  - host: great-chat.arpansahu.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: great-chat-service
            port:
              number: 8020
